dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: relation-api-service-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: relation-api-server.app.fcgm.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: relation-api-service
            port:
              number: 31508
